Added Pop Up Prevention

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,8 @@
     <script src="popup.js"></script>
 </head>
 <body>
-    <button id="runCode">Run Code</button>
+    <button id="runCode125">1.25x Speed</button>
+    <button id="runCode15">1.5x Speed</button>
+    <button id="runCode2">2x Speed</button>
 </body>
 </html>
