--- a/popup.html
+++ b/popup.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Video Playback Extension</title>
     <script src="popup.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="runCode125">1.25x Speed</button>
-    <button id="runCode15">1.5x Speed</button>
-    <button id="runCode2">2x Speed</button>
+    <div class="buttonContainer">
+        <h2>Moodle Speed Up</h2>
+    </div>
+    <div class='buttonContainer'>
+        <button class="buttonStyle" id="runCode125">1.25x Speed</button>
+        <button class="buttonStyle" id="runCode15">1.5x Speed</button>
+        <button class="buttonStyle" id="runCode2">2x Speed</button>
+    </div>
 </body>
 </html>
